syntax = "proto3";

package halo.halopb.v1;

option go_package = "github.com/omni-network/omni/halo/halopb/v1";

// BlockHeader uniquely identifies a cross chain block.
message BlockHeader {
  uint64 chain_id    = 1; // Chain ID as per https://chainlist.org
  uint64 height      = 2; // Height of the block
  bytes  hash        = 3; // Hash of the block
}

// AggAttestation aggregates multiple attestation by a validator set of a cross-chain Block.
message AggAttestation {
  BlockHeader       block_header     = 1; // BlockHeader identifies the cross-chain Block
  uint64            validator_set_id = 2; // Unique identified of the validator set included in this aggregate.
  bytes             block_root       = 3; // Merkle root of the cross-chain Block
  repeated SigTuple signatures       = 4; // Validator signatures and public keys
}

// SigTuple is a validator signature and public key.
message SigTuple {
  bytes validator_pub_key = 1; // Validator public key; 33 bytes compressed secp256k1.
  bytes signature         = 2; // Validator signature over XBlockRoot; Ethereum 65 bytes [R || S || V] format.
}